agregamos logica para que el boton de wsp aparezca en el home junto al p-scrollTop: PC-OFICINA

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -74,7 +74,8 @@
 
   </div>
 
-  <p-scrollTop />
+  <p-scrollTop *ngIf="showWhatsAppButton" />
+  <app-whatsapp-button *ngIf="showWhatsAppButton" />
 
 
 </div>
