--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -74,7 +74,7 @@
 
   </div>
 
-  <p-scrollTop *ngIf="showWhatsAppButton" />
+  <p-scrollTop />
   <app-whatsapp-button *ngIf="showWhatsAppButton" />
 
 
