--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -68,12 +68,21 @@ $transition-duration: 0.3s;
     @media screen and (max-width: 700px) {
       max-width: 55rem;
     }
+ 
   }
 
   &__content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    @media screen and (max-width: 600px) {
+      display: flex;
+      flex-direction: column;
+      div {
+        margin-bottom: 1rem
+      }
+    }
   }
 
   &__section {
@@ -100,6 +109,7 @@ $transition-duration: 0.3s;
         margin-bottom: 1.1rem;
       }
     }
+
   }
 
   &__copyright {
@@ -112,4 +122,7 @@ $transition-duration: 0.3s;
     transition: opacity 0.3s ease-in-out;
 
   }
+
 }
+
+
