terminamos el responsive del footer: PC-OFICINA

--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -6,8 +6,8 @@
       <div class="footer__section footer__section--desarrollador">
         <h2> <img class="logo-footer" src="../../../../assets/Logo_3.svg" alt="" height="50rem"></h2>
          <p>Somos una empresa con más de 30 años </p>
-         <p> de trayectoria en el rubro de la construcción, </p>
-         <p> lo que nos convierte en líderes en el sector. </p>
+          de trayectoria en el rubro de la construcción,
+          lo que nos convierte en líderes en el sector.
       </div>
 
       <div class="footer__section footer__section--contact">
@@ -24,6 +24,7 @@
         <p> <i class="pi pi-envelope"></i> administracion{{arroba}}basamento-srl.com </p>
         <p> <i class="pi pi-phone"></i> +54 9 (3462) 553824 / 537066</p>
       </div>
+
     </div>
 
     <hr>
