modificamos unas cosas del responsive de nosotros: PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -143,7 +143,7 @@
   <div class="nosotros__content-3">
 
     <div class="nosotros__content-3__title-background">
-      <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
+      <img class="vector_home" src="../../../../assets/imagenes/home/vectores/onda.svg">
       <h2 class="sub-title">Preguntas Frecuentes</h2>
     </div>
 
@@ -199,8 +199,6 @@
     <p class="nosotros__contact__subtitle_1"> Explora de que manera podemos colaborar en la ejecución </p>
     <p class="nosotros__contact__subtitle_2 last-content"> y mejora de tus proyectos de infraestructura </p>
     <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
-
-
   </div>
 
 
