--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -71,7 +71,7 @@
         font-size: 1.5rem;
 
         @media screen and (max-width: 960px) {
-          width: 75%;
+          width: 80%;
           text-align: justify;
           font-size: 1.2rem;
         }
@@ -144,25 +144,36 @@
 
 
   &__contact {
+
     text-align: center;
 
     p {
       font-size: 2rem;
       text-align: center;
+      @media screen and (max-width: 700px) {
+        font-size: 1.5rem;
+      }
 
+      @media screen and (max-width: 500px) {
+        font-size: 1.35rem;
+      }
     }
     button {
       background-color: var(--color-secondary);
       font-family: kanit-regular;
       border: none;
       color: white;
-      padding: 0.9375rem 2rem;
+      padding: 0.9rem 2rem;
       text-align: center;
       text-decoration: none;
-      display: inline-block;
       font-size: 1.3rem;
       cursor: pointer;
       transition-duration: 0.2s;
+
+      @media screen and (max-width: 700px) {
+        font-size: 1rem;
+        padding: 0.7rem 1.5rem ;
+      }
 
     }
 
