--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -18,6 +18,10 @@
     width: 50vw;
     margin: 0 auto;
 
+    @media screen and (max-width: 600px) {
+      width: 85vw;
+    }
+
     .text-validators {
       margin-bottom: 0.5rem;
       margin-top: -0.6rem;
@@ -124,31 +128,34 @@
       height: 10rem;
       background-color: var(--color-primary);
       z-index: -1;
+    }
+    @media screen and (max-width: 600px) {
+      display: flex;
+      flex-direction: column;
+      .background {
+        display: none;
+      }
+    }
   }
-  }
-
-
-
 
   &__map  {
+    width: 100%;
     h2 {
-      margin: 0 auto;
+      margin: auto;
+      margin-bottom: 5rem;
     }
     iframe {
       display: flex;
-      align-items: center;
-      width: 70rem;
-      height: 35rem;
+      width: 80%;
+      height: 30rem;
       margin-top: 5rem;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.3s;
-      @media screen and (max-width: 900px) {
-        width: 60rem;
-        height: 30rem;
-      }
-      @media screen and (max-width: 800px) {
-        width: 54rem;
-        height: 27rem;
+      margin: auto;
+
+      @media screen and (max-width: 600px) {
+        width: 100%;
+        height: 20rem;
       }
     }
   }
