empezamos con el responsive del home: PC-OFICINA

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <shared-header></shared-header>
 
+<img *ngIf="showFragment" src="../../../../assets/imagenes/home/header-responsive.jpg">
+
 <div class="home animate__animated animate__fadeIn">
 
   <img class="vector_home" src="../../../../assets/imagenes/home/vectores/onda.svg">
