--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -28,6 +28,7 @@
         letter-spacing: 0.3rem;
         color:#ffff;
         text-shadow: 2px 2px 4px #000000;
+
         @media screen and (max-width: 1700px) {
           font-size: 3.5rem;
         }
@@ -35,24 +36,35 @@
         @media screen and (max-width: 1200px) {
           font-size: 2.8rem;
         }
+        @media screen and (max-width: 960px) {
+          font-size: 1.7rem;
+        }
     }
     &__title-2 {
           font-size: 5rem;
           letter-spacing: 0.3rem;
           color:#ffff;
           text-shadow: 2px 2px 4px #000000;
+
           @media screen and (max-width: 1700px) {
             font-size: 4.5rem;
           }
           @media screen and (max-width: 1200px) {
             font-size: 3.8rem;
           }
+          @media screen and (max-width: 960px) {
+            font-size: 2.7rem;
+          }
+
     }
     &__subtitle {
         font-size: 2rem;
         color: #FEBF07;
         text-shadow: 2px 2px 4px #000000;
         margin-bottom: 3rem;
+        @media screen and (max-width: 960px) {
+          font-size: 1.5rem;
+        }
 
     }
 
@@ -63,7 +75,7 @@
     transform: translate(-50%, -50%);
   }
 
-  @media screen and (max-width: 960px) {
+  @media screen and (max-width: 600px) {
     display: none;
   }
 }
@@ -91,6 +103,9 @@
   line-height: 1.5;
   margin: 0;
   padding: 0;
+  @media screen and (max-width: 960px) {
+    font-size: 70%;
+  }
 }
 
 .btn-53:disabled {
