creamos el componente de header_responsive: PC-OFICINA

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -1,6 +1,5 @@
 <shared-header></shared-header>
-
-<img *ngIf="showFragment" src="../../../../assets/imagenes/home/header-responsive.jpg">
+<shared-header-responsive *ngIf="showFragment"></shared-header-responsive>
 
 <div class="home animate__animated animate__fadeIn">
 
