ya casi terminamos el responsive del home, hay que buscar un boton: PC-OFICINA

--- a/src/app/client/shared/header-responsive/header-responsive.component.html
+++ b/src/app/client/shared/header-responsive/header-responsive.component.html
@@ -1,6 +1,6 @@
 <div class="header_responsive">
 
-  <img class="img_home_responsive" src="../../../../assets/imagenes/home/header-responsive.jpg">
+  <img #imagenElement class="img_home_responsive"  src="../../../../assets/imagenes/home/header-responsive.jpg">
 
   <div class="header_responsive__content">
 
@@ -12,9 +12,7 @@
 
     <div class="header__btn-container">
 
-     <button>
-      BOTON
-     </button>
+     <button (click)="scrollToImagen()"> BOTON </button>
 
     </div>
 
