--- a/src/styles.scss
+++ b/src/styles.scss
@@ -296,9 +296,9 @@ h1 {
 
   }
 
-  @media screen and (max-width: 600px) {
-    position: sticky;
-  }
+  // @media screen and (max-width: 600px) {
+  //   position: sticky;
+  // }
 
 
   img {
