--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -1,6 +1,11 @@
 
 
 .contacto {
+
+  @media screen and (max-width: 600px) {
+    margin-top: 6.5rem;
+  }
+
   display: flex;
   flex-direction: column;
   text-align: center;
