--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -2,6 +2,9 @@
 
 .nosotros {
   background-color: var(--color-background-light);
+  @media screen and (max-width: 600px) {
+    margin-top: 6.5rem;
+  }
 
   &__content-1 {
 
