--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -2,6 +2,12 @@
 $color-background: #5ad8fe46;
 
 .servicios {
+
+  @media screen and (max-width: 600px) {
+    margin-top: 6.5rem;
+  }
+
+  
   &__content {
     display: flex;
     justify-content: space-around;
