--- a/src/app/client/shared/header-responsive/header-responsive.component.html
+++ b/src/app/client/shared/header-responsive/header-responsive.component.html
@@ -10,11 +10,16 @@
 
     <h4 class="header_responsive__content__subtitle">Ingeniería y Construcción</h4>
 
-    <div class="header__btn-container">
+    <div>
 
-     <button (click)="scrollToImagen()"> BOTON </button>
+     <!-- <button (click)="scrollToImagen()"> BOTON </button> -->
+
+     <button (click)="scrollToImagen()" class="btn">
+       <div class="scroll"></div>
+     </button>
 
     </div>
+
 
 
 
