--- a/src/app/client/shared/header-responsive/header-responsive.component.scss
+++ b/src/app/client/shared/header-responsive/header-responsive.component.scss
@@ -57,11 +57,51 @@
 
   }
 
+}
 
-  &__btn-container {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+.btn {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  width: 30px;
+  height: 50px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+  outline: 2px solid white;
+  box-shadow: 0px 0px 10px white;
+  position: relative;
 
 }
+
+.scroll {
+  width: 5px;
+  height: 10px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0px 0px 10px white;
+  animation: scroll_4013 2s linear infinite;
+  transform: translateY(40%);
+}
+
+.btn:after {
+  content: '';
+  position: absolute;
+  top: 140%;
+  color: whitesmoke;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+}
+
+@keyframes scroll_4013 {
+  0% {
+    transform: translateY(40%);
+  }
+
+  50% {
+    transform: translateY(90%);
+  }
+};
