--- a/src/app/client/pages/home/home.component.scss
+++ b/src/app/client/pages/home/home.component.scss
@@ -32,11 +32,15 @@
           @media screen and (max-width: 1200px) {
             width: 12rem !important;
           }
+          @media screen and (max-width: 600px) {
+            width: 15rem !important;
+          }
         }
         .img-2 {
           @media screen and (max-width: 1200px) {
             width: 15rem !important;
           }
+
         }
 
         div {
