--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -5,9 +5,9 @@
 
       <div class="footer__section footer__section--desarrollador">
         <h2> <img class="logo-footer" src="../../../../assets/Logo_3.svg" alt="" height="50rem"></h2>
-         <p>Somos una empresa con más de 30 años </p>
+         <p>Somos una empresa con más de 30 años
           de trayectoria en el rubro de la construcción,
-          lo que nos convierte en líderes en el sector.
+          lo que nos convierte en líderes en el sector. </p>
       </div>
 
       <div class="footer__section footer__section--contact">
