--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -126,14 +126,12 @@ $transition-duration: 0.3s;
         margin-bottom: 1rem;
       }
       @media screen and (max-width: 800px) {
-        width: 15rem;
+        width: 50%;
+        text-align: justify;
+        line-height: 2.5rem;
         margin-bottom: 2.8rem;
         img {
           height: 3rem;
-        }
-        p {
-          font-size: 0.8rem;
-
         }
       }
     }
