cambie el color de texto del boton responsive del home: PC-OFICINA

--- a/src/app/client/components/button-info-card-responsive/button-info-card-responsive.component.scss
+++ b/src/app/client/components/button-info-card-responsive/button-info-card-responsive.component.scss
@@ -10,7 +10,7 @@
   background-color: inherit;
   border-radius: 6.25rem;
   font-weight: 600;
-  color: var(--color-secondary);
+  color: rgba(255, 255, 255, 0.785);
   box-shadow: 0 0 0 2px var(--color-primary);
   cursor: pointer;
   overflow: hidden;
