--- a/src/app/client/shared/header-responsive/header-responsive.component.html
+++ b/src/app/client/shared/header-responsive/header-responsive.component.html
@@ -12,17 +12,11 @@
 
     <div>
 
-      <div (click)="scrollToImagen()" class="scrolldown" style="--color: white; margin-bottom: 5rem;">
-        <div class="chevrons">
-            <div class="chevrondown"></div>
-            <div class="chevrondown"></div>
-        </div>
-    </div>
+    <button  (click)="WithDelay()" class="Btn">
+      <svg height="1.2em" class="arrow" viewBox="0 0 512 512"><path d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z"></path></svg>
+    </button>
 
     </div>
-
-
-
 
   </div>
 </div>
