agrege un setTimeOut al boton de la vista de nosotros para el responsive: PC

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -199,7 +199,7 @@
   <div class="nosotros nosotros__contact">
     <p class="nosotros__contact__subtitle_1"> Explora de que manera podemos colaborar en la ejecución </p>
     <p class="nosotros__contact__subtitle_2 last-content"> y mejora de tus proyectos de infraestructura </p>
-    <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
+    <button class="last-content" data-aos="flip-up" data-aos-duration="3000" (click)="navigateWithDelay('/contacto')">Contacto</button>
   </div>
 
 
